<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:id="@+id/main_layout"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.baly.currencyexchange.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/help"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:drawableLeft="@drawable/notification"
            android:drawableStart="@drawable/notification"
            android:gravity="center_vertical"
            android:text="@string/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_height="2dp" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/card_holder_recyler_view"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:layout_height="wrap_content">


        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <Button
        android:gravity="center"
        android:id="@+id/retry_button"
        android:text="@string/click_to_retry"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/help_text_view"
        android:visibility="gone"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/float_action_button"
        android:layout_margin="12dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/add_floating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>